# MMIX_Assembler

./: .gitattributes  README.md  chunk.c  chunk.h  example1.mmix  example2.mmix  instructions.txt  main.c  scanner.c  scanner.h  table.h  trie.c  trie.h  vm.c  vm.h
src/: CMakeLists.txt  Makefile  Makefile_assembler  Makefile_simulator  a.out  common.c  common.h  debug.c  debug.h  dynamic_list.c  dynamic_list.h  instructions2.txt  main.c  make  parser.c  parser.h  parser.h.gch  parser2.c  scanner.c  scanner.h  scanner.h.gch  table.c  table.h  test.mms  test1.mms  test2.mms  test3.mms  trie.c  trie.h  trie.h.gch  vm.c  vm.h  vm.h.gch
src/testing/: example0.txt  example1.txt  example5.txt  example6.txt  parsing.c
tests/: elevator.mms  example0.mmix  example0.mms  example1.mmix  example1.mms  example2.mmix  example2.mms  example3.mmix  example3.mms  inverse1.mmix  inverse1.mms  inverse2.mms  inverse3.mms  mmix_sim.mms  polynomial_addition.mmix  polynomial_addition.mms  stack_deletion.mms  stack_insertion.mmix  stack_insertion.mms  topological_sort.mms
